2007-02-28  Sebastien Bacher  <seb128@ubuntu.com>

	* gedit/gedit-python-module.c: (gedit_python_module_load):
	make plugins work with python2.5 on 64 bits architecture. Bug #413030

2007-02-27  Paolo Maggi  <paolo@gnome.org>

	* plugins/filebrowser/gedit-file-bookmarks-store.c (add_uri):
	added a comment for translators. Bug #412627.

=== gedit 2.17.6 ===

2007-02-26  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.6 released

2007-02-26  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: do not use grep -q since it doesn't work on
	Solaris. Patch by Jeff Cai.

2007-02-25  Paolo Borelli  <pborelli@katamail.com>

	* plugins/taglist/gedit-taglist-plugin-panel.c: mark string for
	translation. Bug #409017.

2007-02-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugins-engine.c: allow user plugins to override
	system plugins. Bug #407374.

2007-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-documents-panel.c: when adding a row, select
	it only if the corresponding tab is active. Bug #407536.

2007-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: handle sigbus signal
	when acessing the mmaped file since it is fired in case
	of I/O error. This should fix #354046.

2007-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: refactor how the
	encoding is fetched from metadata.

=== gedit 2.17.5 ===

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.5 released

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* bindings/python/gedit.override:
	* bindings/python/gedit.defs:

	Bind GeditStatusbar, bug #401851 patch by P. Henrique Silva.

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* plugins/modelines/modeline-parser.c: fix "indent-tabs-mode"
	in emacs modelines (cut&paste error in the python/C transition)

2007-02-06  Jesse van den Kieboom  <jesse@icecrew.nl>
