@@ -14,3 +14,4 @@ X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gedit
 X-GNOME-Bugzilla-Component=general
 X-GNOME-Bugzilla-Version=@VERSION@
+X-GNOME-Bugzilla-ExtraInfoScript=@FULL_LIBDIR@/gedit-2/gedit-bugreport.sh
