@@ -1,3 +1,15 @@
+2007-03-07  Steve Frécinaux  <code@istique.net>
+
+	* configure.ac: add AC_SUBST for an expanded version of $(libdir)
+
+	* data/gedit-bugreport.sh: script get additional informations for
+	BugBuddy reports. Currently shows what's the distro (using LSB) and
+	what plugins are enabled.
+
+	* data/gedit.desktop.in.in: add X-GNOME-Bugzilla-ExtraInfoScript key.
+
+	* data/Makefile.am: install the new script in $(libdir).
+
 2007-02-28  Sebastien Bacher  <seb128@ubuntu.com>
 
 	* gedit/gedit-python-module.c: (gedit_python_module_load):
